--- a/index.html
+++ b/index.html
@@ -1921,7 +1921,8 @@ Continuity ensures:
 </script>
 
 
-<img id="paperSiteSigil" alt="Paper Sigil" src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAoAAAAKCAMAAAC67D+PAAAAElBMVEUAAAB/f3+hoaGZmZmjo6O3t7dV7p+4AAAAAXRSTlMAQObYZgAAADlJREFUGJVjYIACJiYm+VmJgUQgQ0AiGhmZWSkAVAxCyoKEQBUnMYGBkYGRcAMVYMkDFhkBQAAnbgNEbGsyyoAAAAASUVORK5CYII=" />
+<img id="paperSiteSigil" src="assets/sigil.png" alt="Paper Sigil" />
+
 <div id="paperSigilDock" class="dock-draggable" aria-label="Site sigil controls">
   <div class="dock-handle">
     <div style="font-weight:650; letter-spacing:.2px;">Site Sigil</div>
