--- a/index.html
+++ b/index.html
@@ -2392,5 +2392,16 @@ Continuity ensures:
 })();
 </script>
 
+/* Kill any residual bottle container chrome */
+#yumToggle,
+#yumToggle::before,
+#yumToggle::after {
+  border: none !important;
+  outline: none !important;
+  background: transparent !important;
+  box-shadow: none !important;
+}
+
+
 </body>
 </html>
