--- a/index.html
+++ b/index.html
@@ -1037,6 +1037,9 @@ body.mode-translator #variantDock{ border-color: rgba(127,209,209,0.22); }
 
 </head>
 <body>
+<div style="position:fixed;top:0;left:0;right:0;background:red;color:white;z-index:9999;">
+TEST BANNER
+</div>
 
 
 <section id="detection-feedback-hub">
