--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
-html { outline: 8px solid magenta !important; }
+<link rel="stylesheet" href="css/main.css">
+<link rel="stylesheet" href="css/relay-theme.css">
 <html lang="en">
 <head>
 <meta charset="utf-8"/>
